# Gemma-TIMMY-MLDL-Maths-v5

./: .gitignore  LICENSE  RELEASE_MANIFEST.md  advanced_calculators.py  combine_v61_consultant_batches.py  dl_calculators.py  einstein_dl_hybrid_assistant.py  einstein_v51_hybrid_assistant.py  einstein_v52_hybrid_assistant.py  einstein_v6_hybrid_assistant.py  generate_v52_advanced_dataset.py  generate_v5_dl_dataset.py  generate_v61_ollama_consultant_dataset.py  generate_v6_curated_dataset.py  instruction.md  martha_v61_consultant_training_report.md  math_calculators.py  package.json  pyproject.toml  readme.md  requirements.txt  stats_calculators.py  test_finetuned_math_assistant.py  train_gemma_unsloth.py
CGI/: README.md  download_runtime.py  ml_consultant.py  requirements.txt
docs/: DATASET_CARD.md  MODEL_CARD.md  RELEASE_NOTES.md  WORKSPACE_MAP.md  WSL_V6_TRAINING.md
martha_v6/: __init__.py  api.py  cli.py
node/: cli.js  index.js
samples/: v52_advanced_min_sample.jsonl  v5_dl_min_sample.jsonl  v61_consultant_combined_min_sample.jsonl  v61_ollama_consultant_min_sample.jsonl  v61_ollama_consultant_min_sample_batch02.jsonl  v61_ollama_consultant_min_sample_batch03.jsonl  v61_ollama_consultant_min_sample_batch04.jsonl  v61_ollama_consultant_min_sample_batch05.jsonl  v61_ollama_consultant_min_sample_batch06.jsonl  v61_ollama_consultant_min_sample_batch07.jsonl  v61_ollama_consultant_min_sample_batch08.jsonl  v6_curated_min_sample.jsonl
scripts/: export_v61_gguf.py  setup_wsl_workspace.sh  test_v61_helper.py  train_v61_wsl.sh  train_v6_wsl.sh
tools/eval/: README.md  (+7 more)
(+2 files in other folders)
